# Maki-Cogs

./: .gitignore  LICENSE  README.md
avgfamil/: .gitignore  __init__.py  avgfamil.py  info.json  test_generator.py  test_quotes.py
chimeradice/: .envrc  .gitignore  CLAUDE.md  Claude Context.md  DROP_LOWEST_FIX.md  FINAL_FIX_SUMMARY.md  FUDGE_DISPLAY_UPDATE.md  USER_COMMANDS_ANNOUNCEMENT.md  __init__.py  __init__.py.Windows-version  chimeradice.py  chimeradice.py.Windows-version  chimeradice_core.py  chimeradice_test.py  flake.nix  info.json  pyproject.toml  run_tests.py  test_dice_parser.py  test_fudge_display_final.py  test_karma_simple.py  test_validation_fix.py
chimeradice/docs/plans/: 2025-12-28-property-tests-refactor-design.md  2026-02-01-cpr-mode-design.md  2026-02-01-cpr-mode-implementation.md
chimeradice/tests/: __init__.py  test_chimeradice.py  test_chimeradice_properties.py  test_drop_lowest.py  test_fudge_display.py  test_functionality.py  test_karma_probability.py  test_luck_system.py  test_optional_numbers.py  test_test_queue_validation.py  test_translation.py
custodian/: __init__.py  custodian.py  info.json
custodianre/: CONTEXT_REMINDER.md  __init__.py  custodianre.py  info.json
dmlisten/: __init__.py  dmlisten.py  info.json
libertybank/: __init__.py  info.json  libertybank.py
makialert/: README.md  __init__.py  audio_integration.py  info.json  makialert.py
msgprune/: __init__.py  info.json  msgprune.py
perfectttt/: __init__.py  __init__.py.Windows-version  info.json  perfectttt.py  perfectttt.py.Windows-version
wordcloudre/: CLAUDE.md  (+3 more)
(+4 files in other folders)
