[project]
name = "chimeradice"
version = "3.0.0"
description = "A dice roller with probability-based luck and karma systems"
readme = "USER_COMMANDS_ANNOUNCEMENT.md"
requires-python = ">=3.11"
dependencies = [
    "hypothesis>=6.0",
    "d20>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]
